# SDL_Project

./: .gitignore  CMakeLists.txt
cmake_helpers/: helpers_c.cmake
cmake_helpers/find_modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
game/include/: main.h
game/src/: main.c
game_engine/: CMakeLists.txt
game_engine/include/Actors/: BaseCharacter.h  EnemyCharacter.h  Player.h  PlayerCharacter.h  sdl_character.h
game_engine/include/Core/: Camera2D.h  GameEngineCore.h  MainGameLoop.h  sdl_default_app_settings.h  sdl_methods.h
game_engine/include/Core/GameScenes/: DeathScreen.h  MainLevel.h  TitleScreen.h
game_engine/include/GameObject/: GameObject2D.h  ObjectPool.h  Transform2D.h
game_engine/include/Graphics/: DrawParalaxBackgrounds.h  GraphicsRenderer.h  GraphicsRenderer2D.h  ImageLayers.h  StateMachine.h  Transform2D.h  gfxRenderer.h
game_engine/include/Managers/: CharactersEventManager.h  CollisionManager.h  EventManager.h  GameObjectManager.h  GameStateManager.h  NPCManager.h  TextureManager.h  WindowManager.h
game_engine/include/Physics/: Collider2D.h  RigidBody2D.h  Vector2D.h  sdl_rigidBody2D.h  sdl_vector2D.h
game_engine/include/Timers/: Timers.h
game_engine/include/Utils/include/: Defines.h  ErrorCodes.h  Log.h
game_engine/src/: BaseCharacter.c  BasePlatform2D.c  Camera2D.c  Collider2D.c  CollisionManager.c  DrawParalaxBackgrounds.c  EventManager.c  GameEngineCore.c  GameObject2D.c  GameObjectManager.c  GameStateManager.c  GraphicsRenderer.c  GraphicsRenderer2D.c  ImageLayers.c  MainGameLoop.c  ObjectPool.c  Player.c  PlayerCharacter.c  RigidBody2D.c  StateMachine.c  TextureManager.c  Timers.c  Transform2D.c  Vector2D.c  WindowManager.c  gfxRenderer.c  sdl_character.c  sdl_methods.c  sdl_rigidBody2D.c  sdl_transform2D.c
game_engine/src/Actors/: BaseCharacter.c  EnemyCharacter.c  PlayerCharacter.c
game_engine/src/Core/: Camera2D.c  GameEngineCore.c  sdl_methods.c
game_engine/src/Core/GameScenes/: DeathScreen.c  MainLevel.c  TitleScreen.c
game_engine/src/GameObject/: GameObject2D.c  ObjectPool.c
game_engine/src/Graphics/: DrawParalaxBackgrounds.c  GraphicsRenderer2D.c  ImageLayers.c
game_engine/src/Managers/: CharactersEventManager.c  CollisionManager.c  EventManager.c  GameObjectManager.c  GameStateManager.c  NPCManager.c  TextureManager.c  WindowManager.c
game_engine/src/Physics/: RigidBody2D.c  Vector2D.c
game_engine/src/Timers/: Timers.c
game_engine/src/Utils/src/containers/: Vector.c
game_engine/src/Utils/src/vfx_tools/: shapes.c
include/: defines.h  event_poll.h  gameLoop.h  sdl_methods.h
sdl_utils/: CMakeLists.txt
sdl_utils/src/: sdl_methods.c
src/: gameLoop.c  main.c  sdl_methods.c
utils/: CMakeLists.txt
utils/include/utils/: defines.h
utils/include/utils/containers/: Vector.h
utils/include/utils/vfx_tools/: shapes.h
utils/src/containers/: Vector.c
utils/src/vfx_tools/: shapes.c
utils_sdl/: CMakeLists.txt
utils_sdl/include/: event_poll.h  sdl_command.h  sdl_default_app_settings.h  sdl_event_defines.h  sdl_event_handler.h  sdl_gfx_renderer.h  sdl_methods.h
utils_sdl/include/Actors/: sdl_character.h
utils_sdl/include/Core/: GameEngineCore.h  sdl_event_handler.h  sdl_methods.h
utils_sdl/include/GameObject/: GameObject2D.h  ObjectPool.h  sdl_game_object.h
utils_sdl/include/Graphics/: animation_settings.h  gfxRenderer.h  sdl_gfx_renderer.h  sdl_transform2D.h
utils_sdl/include/Managers/: EventManager.h  GameObjectManager.h  TextureManager.h  WindowManager.h
utils_sdl/include/Physics/: sdl_transform2D.h  sdl_vector2D.h
utils_sdl/src/: EventManager.c  GameEngineCore.c  GameObject2D.c  GameObjectManager.c  ObjectPool.c  TextureManager.c  WindowManager.c  event_poll.c  gfxRenderer.c  sdl_character.c  sdl_command.c  sdl_event_handler.c  sdl_game_object.c  sdl_gfx_renderer.c  sdl_methods.c  sdl_rigidBody2D.c  sdl_transform2D.c  sdl_vector2D.c
